[package]
name = "webxr-api"
version = "0.0.1"
authors = ["The Servo Project Developers"]
edition = "2018"

homepage = "https://github.com/servo/webxr"
repository = "https://github.com/servo/webxr"
keywords = ["webxr", "openvr", "oculus", "magicleap", "headset", "vr", "ar"]
license = "MPL-2.0"

description = '''A safe Rust API that provides a way to interact with
Virtual Reality and Augmented Reality devices and integration with
vendor-specific APIs like OpenVR, Oculus, GoogleVR and Magic Leap. The
API is inspired by the WebXR Device API (https://www.w3.org/TR/webxr/)
but adapted to Rust design patterns.'''

[lib]
path = "lib.rs"

[features]
ipc = ["serde", "ipc-channel", "euclid/serde"]

[dependencies]
euclid = "0.20"
surfman = { git = "https://github.com/pcwalton/surfman", features = ["sm-osmesa"] }
surfman-chains = { git = "https://github.com/asajeffrey/surfman-chains" }
ipc-channel = { version = "0.12", optional = true }
log = "0.4"
serde = { version = "1.0", optional = true }
# winit 0.19.4 doesn't compile for android
winit = "= 0.19.3"
