[package]
name = "webxr"
version = "0.0.1"
authors = ["The Servo Project Developers"]
edition = "2018"

homepage = "https://github.com/servo/webxr"
repository = "https://github.com/servo/webxr"
keywords = ["webxr", "openxr", "oculus", "headset", "vr", "ar"]
license = "MPL-2.0"

description = '''A safe Rust API that provides a way to interact with
Virtual Reality and Augmented Reality devices and integration with OpenXR.
The API is inspired by the WebXR Device API (https://www.w3.org/TR/webxr/)
but adapted to Rust design patterns.'''

[lib]
path = "lib.rs"

[features]
default = ["x11"]
x11 = ["surfman/sm-x11"]
angle = ["surfman/sm-angle"]
glwindow = []
headless = []
ipc = ["webxr-api/ipc", "serde"]
openxr-api = ["angle", "openxr", "winapi", "wio", "surfman/sm-angle-default"]

[dependencies]
webxr-api = { path = "../webxr-api" }
crossbeam-channel = "0.5"
euclid = "0.22"
log = "0.4.6"
openxr = { version = "0.19", optional = true }
serde = { version = "1.0", optional = true }
glow = "0.14.2"
surfman = { version = "0.9", features = ["chains"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["dxgi", "d3d11", "winerror"], optional = true }
wio = { version = "0.2", optional = true }
